# MPISound

./: CMakeLists.txt  README.md  example_send_recv.cpp
examples/: example_send_recv.cpp
sources/: mpi_sound.cpp  mpi_to_sound.cpp
